# osod24_test_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ackermann_mixer.cpp  ackermann_mixer.h  drivetrain_config.h  main.cpp  pimoroni_pico_import.cmake  receiver.cpp  receiver.h  receiver_cppm.cpp  receiver_cppm.h  receiver_sbus.cpp  receiver_sbus.h  receiver_utils.cpp  receiver_utils.h  tank_driver_mixer.cpp  tank_driver_mixer.h
docs/: architecture.md  index.md
elf2uf2/: elf2uf2
elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
include/sbus_2040/: CMakeLists.txt  README.md
include/sbus_2040/include/: sbus.h
include/sbus_2040/src/: sbus.c
libs/: CMakeLists.txt
libs/balance_port/: CMakeLists.txt
libs/balance_port/include/: ads1x15.h  balance_port.h
libs/balance_port/src/: ads1x15.cpp  balance_port.cpp
libs/bno080/: CMakeLists.txt
libs/bno080/include/: bno080.h
libs/bno080/src/: bno080.cpp
libs/common/: CMakeLists.txt
libs/common/include/: interfaces.h  types.h  utils.h
libs/common/src/: utils.cpp
libs/communicator/: CMakeLists.txt
libs/communicator/include/: communicator.h  payloads.h
libs/communicator/src/: communicator.cpp
libs/config/: CMakeLists.txt
libs/config/include/: drivetrain_config.h  waypoint_routes.h
libs/config/src/: waypoint_routes.cpp
libs/i2cbus/: CMakeLists.txt
libs/i2cbus/include/: i2cbus.h
libs/i2cbus/src/: i2cbus.cpp
libs/mixer/: CMakeLists.txt
libs/mixer/include/: ackermann_mixer.h  ackermann_strategy.h  mecanum_strategy.h  mixer_strategy.h  tank_steer_strategy.h  tank_steer_strategy_with_units.h
libs/mixer/src/: ackermann_mixer.cpp  ackermann_strategy.cpp  mecanum_strategy.cpp  tank_steer_strategy.cpp  tank_steer_strategy_with_units.cpp
libs/navigator/: CMakeLists.txt
libs/navigator/include/: navigator.h
libs/navigator/src/: navigator.cpp
libs/receiver/: CMakeLists.txt
libs/receiver/include/: receiver.h  receiverCPPM.h  receiverSBUS.h
libs/receiver/src/: receiver.cpp  receiverCPPM.cpp  receiverSBUS.cpp
libs/sbus_2040/: CMakeLists.txt
libs/sbus_2040/include/: sbus_2040.h
libs/sbus_2040/src/: sbus_2040.c
libs/screen/include/: ssd1305.h
libs/screen/src/: ssd1305.cpp
libs/serialtransfer/: CMakeLists.txt
libs/serialtransfer/include/: Packet.h  PacketCRC.h  SerialTransfer.h
libs/serialtransfer/src/: Packet.cpp  SerialTransfer.cpp
libs/state_estimator/: CMakeLists.txt
libs/state_estimator/include/: state_estimator.h
libs/state_estimator/src/: state_estimator.cpp
libs/statemanager/: CMakeLists.txt
libs/statemanager/include/: statemanager.h
libs/statemanager/src/: statemanager.cpp
libs/stoker/: CMakeLists.txt
libs/stoker/include/: stoker.h
libs/stoker/src/: stoker.cpp
libs/tf_luna/: CMakeLists.txt
libs/tf_luna/include/: tf_luna.h
libs/tf_luna/src/: tf_luna.cpp
libs/usb_serial/: CMakeLists.txt
libs/usb_serial/include/: USB_Serial.h
libs/usb_serial/src/: USB_Serial.c
libs/waypoint_navigation/: CMakeLists.txt
libs/waypoint_navigation/include/: waypoint_navigation.h
libs/waypoint_navigation/src/: waypoint_navigation.cpp
pico-sdk/src/rp2_common/boot_stage2/: bs2_default.dis  bs2_default.elf.map
pico-sdk/src/rp2_common/tinyusb/pioasm/src/PioasmBuild-stamp/: PioasmBuild-source_dirinfo.txt
pioasm/: pioasm
src/: main.cpp
standalone_utilities/: CMakeLists.txt  motor_profiler.cpp  velocity_tuning.cpp  velocity_tuning_4wd.cpp
